# simplec

./: .gitignore  Makefile  SimpleC.g4  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
simplec/: __init__.py  cli.py  compiler.py  frame.py  interpreter.py  parser.py  parsetab.py  syntax.py
simplec/parser/: SimpleCLexer.py  SimpleCListener.py  SimpleCParser.py  SimpleCVisitor.py  __init__.py
tests/: test_parser.py  test_simplec.py
tests/fixtures/: add.c  call.c  one.c
