[tool.poetry]
name = "simplec"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ply = "^3.11"
attrs = "^21.4.0"
click = "^8.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scc = 'simplec.cli:compiler'
sci = 'simplec.cli:interpreter'
